Added cart page

--- a/css/product_page.css
+++ b/css/product_page.css
@@ -24,12 +24,15 @@
     height: auto;
 }
 
-.productName {
+.productName{
     padding-top: 50px;
     font-size: 30px;
     text-align: justify;
 }
-
+.amountShoe{
+  font-size: 30px;
+  text-align: justify;
+}
 .lineSpace {
     margin-top: 20px;
     text-align: center;
