--- a/css/product_page.css
+++ b/css/product_page.css
@@ -24,12 +24,12 @@
     height: auto;
 }
 
-.productName{
+.productName,.productName2{
     padding-top: 50px;
     font-size: 30px;
     text-align: justify;
 }
-.amountShoe{
+.amountShoe,.amountShoe2{
   font-size: 30px;
   text-align: justify;
 }
@@ -89,7 +89,7 @@
     margin-bottom: 20px;
   }
 
-  .addToCart{
+  .addToCart,.addToCart2{
     margin-left: 15px;
     background-color: rgb(0, 140, 255);
     color: white;
@@ -223,3 +223,31 @@ input[type="submit"]:focus {
   .check{
     font-size:20px;
   }
+  .review-box {
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background: #f9f9f9;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.reviewer-info {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.reviewer-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+    background-color: #bfbfbf;
+}
+.reviewer-name {
+    font-weight: bold;
+}
+.review-text {
+    line-height: 1.6;
+}
+
+
