--- a/css/shipping_Details.css
+++ b/css/shipping_Details.css
@@ -79,6 +79,9 @@ input[type="textarea"]{
     margin-top: 100px;
 
 }
+.sectionbase{
+    margin-top: 50px;
+}
 a{
     text-decoration: none;
     color: black !important;
@@ -105,11 +108,17 @@ background-color: #e3e2e2
    float: right;
    width: 600px;
 }
-#image1{
+#image1,#image2{
     width: 100%;
 }
-.totalprice1{
+.totalprice1,.totalprice2{
     margin-top: 10px;
     margin-left: 10px;
     font-size: 20px;
+}
+#error{
+    color: red;
+}
+.finaltotal,.subtotal{
+   text-align: right;
 }
